Avoiding the overflow of the content in the transaction list when a very long description is present.

--- a/resources/assets/v2/src/sass/app.scss
+++ b/resources/assets/v2/src/sass/app.scss
@@ -76,6 +76,10 @@ h3.hover-expand:hover {
     overflow-x: auto;
 }
 
+.box-body {
+    overflow-x: auto;
+}
+
 .form-control {
     appearance: auto;
 }
